<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.iut_bm_info.amacabr2.topquiz.activities.MainActivity">

    <TextView
        android:id="@+id/activityMain_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/activityMain_lastScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activityMain_editTextNameUser"
        android:gravity="center"
        android:text="@string/lastScore" />

    <EditText
        android:id="@+id/activityMain_editTextNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/activityMain_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/firstname"/>

    <Button
        android:id="@+id/activityMain_buttonLetsGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activityMain_editTextNameUser"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:padding="30dp"
        android:text="@string/go"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/activityMain_buttonBestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activityMain_buttonLetsGo"
        android:layout_alignBottom="@+id/activityMain_buttonLetsGo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@color/colorSilver"
        android:padding="30dp"
        android:text="@string/best_score" />


</RelativeLayout>
